# libcec-daemon

./: Makefile.am  README.md
share/mythbuntu/conf/: libcec-daemon
share/mythbuntu/udev/: libcec-daemon.rules  pulse-eight-hdmi-cec-usb.rules
share/mythbuntu/upstart/: hdmi-cec-activate.conf  hdmi-cec-deactivate.conf  hdmi-cec-standby.conf  libcec-daemon.conf
src/: hdmi.cpp  libcec.cpp  libcec.h  main.cpp  main.h
